Added Mapstruct, swagger UI and custom exceptions